--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -76,6 +76,11 @@ h2 {
     text-align: center;
 }
 
+.sec_btn:hover {
+    color: #d653c0;
+    cursor: pointer;
+}
+
 .btn {
     position: relative;
     display: inline-block;
@@ -96,6 +101,7 @@ h2 {
     color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px #289bb8, 0 0 25px #289bb8, 0 0 50px #289bb8;
+    cursor: pointer;
 }
 
 .btn span {
