--- a/frontend/css/main_page.css
+++ b/frontend/css/main_page.css
@@ -16,23 +16,51 @@ body {
     list-style-type: none;
     padding: 0;
     overflow: hidden;
-    margin: 0px;
-
+    margin: 0;
 }
 
-.navbar a {
+.navbar button {
     color: black;
     text-decoration: none;
     padding: 1rem;
     display: block;
     text-align: center;
-
+    background-color: transparent;
+    border: none;
+    margin: 0;
 }
 
-.navbar a:hover {
+.navbar button:hover {
     color: #a481f5;
+    background-color: #5C63C7;
 }
 
 .navbar li {
     float: right;
+    position: relative;
+}
+
+.expanded_login_profile {
+    display: none;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    border: none;
+    top: 100%;
+    width: 100%;
+}
+
+.expanded_login_profile button {
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 1rem;
+    border: none;
+    background-color: transparent;
+    color: black;
+}
+
+.expanded_login_profile button:hover {
+    color: #a481f5;
+    background-color: #5C63C7;
 }
