--- a/frontend/css/register.css
+++ b/frontend/css/register.css
@@ -76,6 +76,11 @@ h2 {
     text-align: center;
 }
 
+.sec_btn:hover {
+    color: #289bb8;
+    cursor: pointer;
+}
+
 .btn {
     text-decoration: none;
     color:#d653c0;
@@ -96,6 +101,7 @@ h2 {
     background-color: #d653c0;
     border-radius: 5px;
     box-shadow: 0 0 5px #d653c0, 0 0 25px #d653c0, 0 0 50px #d653c0;
+    cursor: pointer;
 }
 
 .btn span {
