--- a/frontend/css/changePassword.css
+++ b/frontend/css/changePassword.css
@@ -13,6 +13,10 @@ body {
     font-size: 16px;
 }
 
+h2 {
+    color: #fff;
+}
+
 html {
     height: 100%;
 }
@@ -44,6 +48,55 @@ html {
     box-sizing: border-box;
     box-shadow: 0 15px 25px rbga(0, 0, 0, 0.6);
     border-radius: 10px;
+}
+
+.changePasswordForm input {
+    width: 100%;
+    padding: 10px 0;
+    background-color: transparent;
+    color: #fff;
+    margin-top: 1rem;
+    border: none;
+    border-bottom: 1px solid #fff;
+    padding-left: 0.8rem;
+    outline: none;
+}
+
+.sec_btn {
+    background-color: transparent;
+    border: none;
+    text-decoration: none;
+    font-size: 0.6rem;
+    color: #289bb8;
+    text-align: center;
+}
+
+.sec_btn:hover {
+    color: #d653c0;
+    cursor: pointer;
+}
+
+.btn {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #289bb8;
+    font-size: 1rem;
+    text-decoration: none;
+    overflow: hidden;
+    transition: .5s;
+    margin-top: 15px;
+    letter-spacing: 2px;
+    background-color: transparent;
+    border: none;
+}
+
+.btn:hover {
+    background-color: #d653c0;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #d653c0, 0 0 25px #d653c0, 0 0 50px #d653c0;
+    cursor: pointer;
 }
 
 .error-message {
