--- a/frontend/css/main_page.css
+++ b/frontend/css/main_page.css
@@ -24,6 +24,7 @@ body {
     border: none;
     margin: 0;
     cursor: pointer;
+    position: relative;
 }
 
 .navbar button:hover {
@@ -44,11 +45,12 @@ body {
 .dropdownContent {
     display: none;
     position: absolute;
-    top: 0;
+    top: calc(3rem - 1px); 
     background-color: #6039BC;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 2;
-    top: calc(3rem - 1px); 
+    transition: height 0.2s ease-in-out;
+    z-index: 1;
+    
 }
 
 .dropdownContent button {
