--- a/frontend/css/services.css
+++ b/frontend/css/services.css
@@ -1,15 +1,14 @@
 body {
-    background-image: url('../pictures/mainBackground.jpg');
+    background-image: url('../pictures/services.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;
     font-size: clamp(8px, 16vw, 16px);
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     min-height: 100vh;
 }
-
 
 .navbar {
     background-color: #6039BC;
@@ -76,61 +75,64 @@ body {
     }
 }
 
-.section {
+.services-container {
     display: flex;
-    gap: 1rem;
-    background-color: white; 
-    padding: 3rem;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, .3);
-    margin: 10rem 1rem; 
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding: 1rem;
+    margin: 0 auto;
+    max-width: 1600px;
+    justify-content: center;
+    align-items: stretch;
 }
 
-.section.reverse {
-    flex-direction: row-reverse;
-}
-
-.section-img img {
-    width: 300px;
-    height: auto;
-    border-radius: 8px;
-}
-
-.section-content {
+.service-box {
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, .1);
+    width: calc(33.333% - 2rem);
+    box-sizing: border-box;
+    margin-bottom: 2rem;
+    overflow: hidden;
+    background-size: auto 50%;
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 3rem;
+    max-height: 700px;
 }
 
-.section-content h2 {
-    margin: 0;
+.service-image {
+    width: 100%;
+    height: 50%;
 }
 
-.section-content button {
-    align-self: flex-start;
-    padding: 0.5rem 3rem;
-    background-color: #6039BC;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.service-info {
+    padding: 1rem;
 }
 
-.section-content button:hover {
-    background-color: #5C63C7;
+.service-info h2 {
+    margin-top: 0;
 }
 
-@media (max-width: 800px) {
-    .section {
-        flex-direction: column;
+.doctors-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.doctors-list li {
+    margin-bottom: 0.5rem;
+}
+
+@media (max-width: 1200px) {
+    .service-box {
+        width: calc(50% - 2rem);
     }
+}
 
-    .section.reverse {
-        flex-direction: column;
-    }
-
-    .section-img img {
-        width: 100%;
+@media (max-width: 600px) {
+    .service-box {
+        width: calc(100% - 2rem);
+        max-height: 500px;
     }
 }
