--- a/frontend/css/appointments.css
+++ b/frontend/css/appointments.css
@@ -21,6 +21,12 @@ body {
     min-height: 100vh;
 }
 
+div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 form {
     background-color: rgba(0, 0, 0, 0.7);
     padding: 2rem;
@@ -149,3 +155,20 @@ button span:nth-child(4) {
         bottom: 100%;
     }
 }
+
+button#homeBtn {
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+}
+
+.errorBox {
+    color: #ff0000;
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+    max-width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1.3rem;
+}
+
