--- a/frontend/css/main_page.css
+++ b/frontend/css/main_page.css
@@ -10,9 +10,8 @@ body {
     min-height: 100vh;
 }
 
-
 .navbar {
-    background-color: #6039BC;
+    background-color: #00BFFF;
     max-width: 100%;
     overflow: hidden;
     display: flex;
@@ -32,8 +31,8 @@ body {
 }
 
 .navbar button:hover {
-    color: #a481f5;
-    background-color: #5C63C7;
+    color: #000000;
+    background-color: #0de3ff;
 }
 
 .dropdown .dropdown {
@@ -50,7 +49,7 @@ body {
     display: none;
     position: absolute;
     animation: expansion 0.5s linear forwards;
-    background-color: #6039BC;
+    background-color: #00BFFF;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -61,13 +60,13 @@ body {
     text-align: center;
     text-decoration: none;
     border: none;
-    background-color: #6039BC;
+    background-color: #00BFFF;
     width: 100%;
 }
 
 .dropdownContent button:hover {
-    background-color: #5C63C7;
-    color: #a481f5;
+    background-color: #0de3ff;
+    color: #000000;
 }
 
 @keyframes expansion {
@@ -110,7 +109,7 @@ body {
 .section-content button {
     align-self: flex-start;
     padding: 0.5rem 3rem;
-    background-color: #6039BC;
+    background-color: #00BFFF; 
     color: white;
     border: none;
     border-radius: 4px;
@@ -118,7 +117,8 @@ body {
 }
 
 .section-content button:hover {
-    background-color: #5C63C7;
+    background-color: #0de3ff;
+    color: #000000;
 }
 
 @media (max-width: 800px) {
