--- a/frontend/css/services.css
+++ b/frontend/css/services.css
@@ -11,7 +11,7 @@ body {
 }
 
 .navbar {
-    background-color: #6039BC;
+    background-color: #00BFFF;
     max-width: 100%;
     overflow: hidden;
     display: flex;
@@ -31,8 +31,8 @@ body {
 }
 
 .navbar button:hover {
-    color: #a481f5;
-    background-color: #5C63C7;
+    color: #000000;
+    background-color: #0de3ff;
 }
 
 .dropdown .dropdown {
@@ -49,7 +49,7 @@ body {
     display: none;
     position: absolute;
     animation: expansion 0.5s linear forwards;
-    background-color: #6039BC;
+    background-color: #00BFFF;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -60,13 +60,13 @@ body {
     text-align: center;
     text-decoration: none;
     border: none;
-    background-color: #6039BC;
+    background-color: #00BFFF;
     width: 100%;
 }
 
 .dropdownContent button:hover {
-    background-color: #5C63C7;
-    color: #a481f5;
+    background-color: #0de3ff;
+    color: #000000;
 }
 
 @keyframes expansion {
